# HSE-Distributed-Computing---Lab1-Pthreads

./: CMakeLists.txt  README.md
src/: main.c  main.h  mandelbrot_set.c  mandelbrot_set.h  monte_carlo.c  monte_carlo.h
src/Task_1/: monte_carlo.c  monte_carlo.h
src/Task_2/: mandelbrot_set.c  mandelbrot_set.h
src/Task_3/: pth_ll_rwl.c  rwlock.c  rwlock.h
